// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartPie 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95A95,95,0,0,1,61.06482292022124,-72.7742220963029L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M61.06482292022124,-72.7742220963029A95,95,0,0,1,82.27241335952168,47.499999999999986L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--200, #8bc1f7); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M82.27241335952168,47.499999999999986A95,95,0,0,1,-82.27241335952165,47.50000000000003L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--300, #002f5d); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M-82.27241335952165,47.50000000000003A95,95,0,0,1,-93.55673653615978,-16.496576878358354L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--400, #519de9); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M-93.55673653615978,-16.496576878358354A95,95,0,0,1,-1.745121688784978e-14,-95L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--500, #004b95); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartPie 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95A95,95,0,0,1,61.06482292022124,-72.7742220963029L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M61.06482292022124,-72.7742220963029A95,95,0,0,1,82.27241335952168,47.499999999999986L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--200, #8bc1f7); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M82.27241335952168,47.499999999999986A95,95,0,0,1,-82.27241335952165,47.50000000000003L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--300, #002f5d); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M-82.27241335952165,47.50000000000003A95,95,0,0,1,-93.55673653615978,-16.496576878358354L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--400, #519de9); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M-93.55673653615978,-16.496576878358354A95,95,0,0,1,-1.745121688784978e-14,-95L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--500, #004b95); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="200"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 200 200"
      width="200"
    >
      <g>
        <path
          d="M4.898587196589413e-15,-80A80,80,0,0,1,64.7213595499958,47.022820183397855L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M64.7213595499958,47.022820183397855A80,80,0,1,1,-47.02282018339786,-64.72135954999578L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--200, #8bc1f7); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M-47.02282018339786,-64.72135954999578A80,80,0,0,1,-1.4695761589768237e-14,-80L0,0Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--300, #002f5d); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="200"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 200 200"
        width="200"
      />
    </div>
  </div>
</DocumentFragment>
`;
